<?xml version="1.0" encoding="utf-8"?>
<TableLayout 
 xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg"
>
<TableRow >
      <TextView
        android:layout_width="120dp"
        android:text="@string/hello"
        android:textColor="@color/txt"
                        android:textSize="30dp"
        
        />
      <EditText
          android:layout_width="200dp" 
          />
</TableRow>
  
  <TableRow >
      <TextView
        android:layout_width="120dp"
                android:textColor="@color/txt"
                android:textSize="30dp"
        android:text="@string/pass"
        />
            <EditText
          android:layout_width="200dp" 
          android:inputType="textPassword"
          />
      
</TableRow>
<TableRow>
    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rempass"
        />
    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgpass"
        />
</TableRow>
<TableRow >
    <Button
        android:text="@string/log"
        android:background="@color/b"
        />
</TableRow>        
    </TableLayout>